y.output
   0  $accept : program $end

   1  program :
   2          | var_dcl sc program
   3          | func_proc program
   4          | struct_dec program

   5  sc : ';'

   6  func_proc : func_dcl
   7            | extern_dcl
   8            | proc_dcl

   9  $$1 :

  10  func_dcl : typee ID $$1 '(' opt_arguments ')' func_end

  11  func_end : sc
  12           | block

  13  extern_dcl : EXTERN typee ID sc

  14  opt_arguments :
  15                | arguments

  16  arguments : typee ID opt_full_brackets
  17            | arguments ',' typee ID opt_full_brackets

  18  opt_brackets :
  19               | opt_brackets '[' ']'

  20  proc_dcl : PROCEDURE ID '(' opt_arguments ')' sc
  21           | PROCEDURE ID '(' opt_arguments ')' block

  22  typee : INT
  23        | BOOL
  24        | FLOAT
  25        | LONG
  26        | CHAR
  27        | DOUBLE
  28        | ID
  29        | STRING
  30        | VOID
  31        | AUTO

  32  struct_dec : RECORD ID '{' var_dcls '}' sc

  33  var_dcls : var_dcl sc
  34           | var_dcls var_dcl sc

  35  opt_var_dcls :
  36               | var_dcl

  37  var_dcl : typee var_dcl_cnts
  38          | CONST typee var_dcl_cnts

  39  var_dcl_cnts : var_dcl_cnt
  40               | var_dcl_cnts ',' var_dcl_cnt

  41  var_dcl_cnt : variable
  42              | variable '=' expr

  43  opt_full_brackets :
  44                    | opt_full_brackets '[' expr ']'

  45  block : '{' block_content '}'

  46  block_content :
  47                | var_dcl sc block_content
  48                | statement block_content
  49                | block block_content

  50  statement : assignment sc
  51            | variable_ sc
  52            | method_call sc
  53            | cond_stmt
  54            | loop_stmt
  55            | RETURN sc
  56            | RETURN expr sc
  57            | goto sc
  58            | label
  59            | BREAK sc
  60            | CONTINUE sc
  61            | SIZEOF '(' typee ')' sc

  62  assignment : variable '=' expr

  63  method_call : ID '(' opt_parameters ')'

  64  opt_parameters :
  65                 | parameters

  66  parameters : expr
  67             | parameters ',' expr

  68  cond_stmt : IF '(' expr ')' block
  69            | IF '(' expr ')' block ELSE block
  70            | SWITCH '(' ID ')' OF ':' '{' opt_cases DEFAULT ':' block '}'

  71  opt_cases :
  72            | opt_cases CASE int_const ':' block

  73  loop_stmt : FOR '(' opt_var_dcls sc expr sc assignment ')' block
  74            | FOR '(' opt_var_dcls sc expr sc expr ')' block
  75            | REPEAT block UNTIL '(' expr ')' sc
  76            | FOREACH '(' ID IN ID ')' block

  77  goto : GOTO ID

  78  label : ID ':'

  79  expr : expr '+' expr
  80       | expr '-' expr
  81       | expr '*' expr
  82       | expr '/' expr
  83       | expr '%' expr
  84       | expr '|' expr
  85       | expr '&' expr
  86       | expr '^' expr
  87       | expr '>' expr
  88       | expr '<' expr
  89       | expr AND expr
  90       | expr OR expr
  91       | expr EQ expr
  92       | expr NE expr
  93       | expr GE expr
  94       | expr LE expr
  95       | '(' expr ')'
  96       | method_call
  97       | variable
  98       | const_val
  99       | '-' expr
 100       | '+' expr
 101       | '!' expr
 102       | SIZEOF '(' typee ')'

 103  variable : ID opt_full_brackets
 104           | ID opt_full_brackets '.' variable
 105           | variable_

 106  variable_ : '~' variable
 107            | DEC variable
 108            | INC variable
 109            | variable DEC
 110            | variable INC

 111  const_val : IC
 112            | RC
 113            | CC
 114            | BC
 115            | SC

 116  int_const : IC
 117            | CC

state 0
	$accept : . program $end  (0)
	program : .  (1)

	EXTERN  shift 1
	PROCEDURE  shift 2
	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	RECORD  shift 12
	CONST  shift 13
	ID  shift 14
	$end  reduce 1

	program  goto 15
	typee  goto 16
	var_dcl  goto 17
	func_proc  goto 18
	struct_dec  goto 19
	func_dcl  goto 20
	extern_dcl  goto 21
	proc_dcl  goto 22


state 1
	extern_dcl : EXTERN . typee ID sc  (13)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	ID  shift 14
	.  error

	typee  goto 23


state 2
	proc_dcl : PROCEDURE . ID '(' opt_arguments ')' sc  (20)
	proc_dcl : PROCEDURE . ID '(' opt_arguments ')' block  (21)

	ID  shift 24
	.  error


state 3
	typee : INT .  (22)

	.  reduce 22


state 4
	typee : BOOL .  (23)

	.  reduce 23


state 5
	typee : FLOAT .  (24)

	.  reduce 24


state 6
	typee : LONG .  (25)

	.  reduce 25


state 7
	typee : CHAR .  (26)

	.  reduce 26


state 8
	typee : DOUBLE .  (27)

	.  reduce 27


state 9
	typee : STRING .  (29)

	.  reduce 29


state 10
	typee : VOID .  (30)

	.  reduce 30


state 11
	typee : AUTO .  (31)

	.  reduce 31


state 12
	struct_dec : RECORD . ID '{' var_dcls '}' sc  (32)

	ID  shift 25
	.  error


state 13
	var_dcl : CONST . typee var_dcl_cnts  (38)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	ID  shift 14
	.  error

	typee  goto 26


state 14
	typee : ID .  (28)

	.  reduce 28


state 15
	$accept : program . $end  (0)

	$end  accept


state 16
	func_dcl : typee . ID $$1 '(' opt_arguments ')' func_end  (10)
	var_dcl : typee . var_dcl_cnts  (37)

	DEC  shift 27
	INC  shift 28
	ID  shift 29
	'~'  shift 30
	.  error

	variable  goto 31
	var_dcl_cnts  goto 32
	var_dcl_cnt  goto 33
	variable_  goto 34


state 17
	program : var_dcl . sc program  (2)

	';'  shift 35
	.  error

	sc  goto 36


state 18
	program : func_proc . program  (3)
	program : .  (1)

	EXTERN  shift 1
	PROCEDURE  shift 2
	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	RECORD  shift 12
	CONST  shift 13
	ID  shift 14
	$end  reduce 1

	program  goto 37
	typee  goto 16
	var_dcl  goto 17
	func_proc  goto 18
	struct_dec  goto 19
	func_dcl  goto 20
	extern_dcl  goto 21
	proc_dcl  goto 22


state 19
	program : struct_dec . program  (4)
	program : .  (1)

	EXTERN  shift 1
	PROCEDURE  shift 2
	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	RECORD  shift 12
	CONST  shift 13
	ID  shift 14
	$end  reduce 1

	program  goto 38
	typee  goto 16
	var_dcl  goto 17
	func_proc  goto 18
	struct_dec  goto 19
	func_dcl  goto 20
	extern_dcl  goto 21
	proc_dcl  goto 22


state 20
	func_proc : func_dcl .  (6)

	.  reduce 6


state 21
	func_proc : extern_dcl .  (7)

	.  reduce 7


state 22
	func_proc : proc_dcl .  (8)

	.  reduce 8


state 23
	extern_dcl : EXTERN typee . ID sc  (13)

	ID  shift 39
	.  error


state 24
	proc_dcl : PROCEDURE ID . '(' opt_arguments ')' sc  (20)
	proc_dcl : PROCEDURE ID . '(' opt_arguments ')' block  (21)

	'('  shift 40
	.  error


state 25
	struct_dec : RECORD ID . '{' var_dcls '}' sc  (32)

	'{'  shift 41
	.  error


state 26
	var_dcl : CONST typee . var_dcl_cnts  (38)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 31
	var_dcl_cnts  goto 43
	var_dcl_cnt  goto 33
	variable_  goto 34


state 27
	variable_ : DEC . variable  (107)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 44
	variable_  goto 34


state 28
	variable_ : INC . variable  (108)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 45
	variable_  goto 34


state 29
	func_dcl : typee ID . $$1 '(' opt_arguments ')' func_end  (10)
	variable : ID . opt_full_brackets  (103)
	variable : ID . opt_full_brackets '.' variable  (104)
	$$1 : .  (9)
	opt_full_brackets : .  (43)

	DEC  reduce 43
	INC  reduce 43
	'='  reduce 43
	';'  reduce 43
	'('  reduce 9
	','  reduce 43
	'['  reduce 43
	'.'  reduce 43

	opt_full_brackets  goto 46
	$$1  goto 47


state 30
	variable_ : '~' . variable  (106)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 48
	variable_  goto 34


state 31
	var_dcl_cnt : variable .  (41)
	var_dcl_cnt : variable . '=' expr  (42)
	variable_ : variable . DEC  (109)
	variable_ : variable . INC  (110)

	DEC  shift 49
	INC  shift 50
	'='  shift 51
	';'  reduce 41
	','  reduce 41


state 32
	var_dcl : typee var_dcl_cnts .  (37)
	var_dcl_cnts : var_dcl_cnts . ',' var_dcl_cnt  (40)

	','  shift 52
	';'  reduce 37


state 33
	var_dcl_cnts : var_dcl_cnt .  (39)

	.  reduce 39


state 34
	variable : variable_ .  (105)

	.  reduce 105


state 35
	sc : ';' .  (5)

	.  reduce 5


state 36
	program : var_dcl sc . program  (2)
	program : .  (1)

	EXTERN  shift 1
	PROCEDURE  shift 2
	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	RECORD  shift 12
	CONST  shift 13
	ID  shift 14
	$end  reduce 1

	program  goto 53
	typee  goto 16
	var_dcl  goto 17
	func_proc  goto 18
	struct_dec  goto 19
	func_dcl  goto 20
	extern_dcl  goto 21
	proc_dcl  goto 22


state 37
	program : func_proc program .  (3)

	.  reduce 3


state 38
	program : struct_dec program .  (4)

	.  reduce 4


state 39
	extern_dcl : EXTERN typee ID . sc  (13)

	';'  shift 35
	.  error

	sc  goto 54


state 40
	proc_dcl : PROCEDURE ID '(' . opt_arguments ')' sc  (20)
	proc_dcl : PROCEDURE ID '(' . opt_arguments ')' block  (21)
	opt_arguments : .  (14)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	ID  shift 14
	')'  reduce 14

	typee  goto 55
	opt_arguments  goto 56
	arguments  goto 57


state 41
	struct_dec : RECORD ID '{' . var_dcls '}' sc  (32)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	CONST  shift 13
	ID  shift 14
	.  error

	typee  goto 58
	var_dcl  goto 59
	var_dcls  goto 60


state 42
	variable : ID . opt_full_brackets  (103)
	variable : ID . opt_full_brackets '.' variable  (104)
	opt_full_brackets : .  (43)

	.  reduce 43

	opt_full_brackets  goto 46


state 43
	var_dcl : CONST typee var_dcl_cnts .  (38)
	var_dcl_cnts : var_dcl_cnts . ',' var_dcl_cnt  (40)

	','  shift 52
	';'  reduce 38


state 44
	variable_ : DEC variable .  (107)
	variable_ : variable . DEC  (109)
	variable_ : variable . INC  (110)

	.  reduce 107


state 45
	variable_ : INC variable .  (108)
	variable_ : variable . DEC  (109)
	variable_ : variable . INC  (110)

	.  reduce 108


state 46
	opt_full_brackets : opt_full_brackets . '[' expr ']'  (44)
	variable : ID opt_full_brackets .  (103)
	variable : ID opt_full_brackets . '.' variable  (104)

	'['  shift 61
	'.'  shift 62
	EQ  reduce 103
	NE  reduce 103
	LE  reduce 103
	GE  reduce 103
	AND  reduce 103
	OR  reduce 103
	DEC  reduce 103
	INC  reduce 103
	'='  reduce 103
	'|'  reduce 103
	'^'  reduce 103
	'&'  reduce 103
	'<'  reduce 103
	'>'  reduce 103
	'+'  reduce 103
	'-'  reduce 103
	'*'  reduce 103
	'/'  reduce 103
	'%'  reduce 103
	';'  reduce 103
	')'  reduce 103
	','  reduce 103
	']'  reduce 103


state 47
	func_dcl : typee ID $$1 . '(' opt_arguments ')' func_end  (10)

	'('  shift 63
	.  error


state 48
	variable_ : '~' variable .  (106)
	variable_ : variable . DEC  (109)
	variable_ : variable . INC  (110)

	.  reduce 106


state 49
	variable_ : variable DEC .  (109)

	.  reduce 109


state 50
	variable_ : variable INC .  (110)

	.  reduce 110


state 51
	var_dcl_cnt : variable '=' . expr  (42)

	SIZEOF  shift 64
	DEC  shift 27
	INC  shift 28
	IC  shift 65
	RC  shift 66
	ID  shift 67
	CC  shift 68
	SC  shift 69
	BC  shift 70
	'+'  shift 71
	'-'  shift 72
	'!'  shift 73
	'~'  shift 30
	'('  shift 74
	.  error

	expr  goto 75
	variable  goto 76
	const_val  goto 77
	variable_  goto 34
	method_call  goto 78


state 52
	var_dcl_cnts : var_dcl_cnts ',' . var_dcl_cnt  (40)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 31
	var_dcl_cnt  goto 79
	variable_  goto 34


state 53
	program : var_dcl sc program .  (2)

	.  reduce 2


state 54
	extern_dcl : EXTERN typee ID sc .  (13)

	.  reduce 13


state 55
	arguments : typee . ID opt_full_brackets  (16)

	ID  shift 80
	.  error


state 56
	proc_dcl : PROCEDURE ID '(' opt_arguments . ')' sc  (20)
	proc_dcl : PROCEDURE ID '(' opt_arguments . ')' block  (21)

	')'  shift 81
	.  error


state 57
	opt_arguments : arguments .  (15)
	arguments : arguments . ',' typee ID opt_full_brackets  (17)

	','  shift 82
	')'  reduce 15


state 58
	var_dcl : typee . var_dcl_cnts  (37)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 31
	var_dcl_cnts  goto 32
	var_dcl_cnt  goto 33
	variable_  goto 34


state 59
	var_dcls : var_dcl . sc  (33)

	';'  shift 35
	.  error

	sc  goto 83


state 60
	struct_dec : RECORD ID '{' var_dcls . '}' sc  (32)
	var_dcls : var_dcls . var_dcl sc  (34)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	CONST  shift 13
	ID  shift 14
	'}'  shift 84
	.  error

	typee  goto 58
	var_dcl  goto 85


state 61
	opt_full_brackets : opt_full_brackets '[' . expr ']'  (44)

	SIZEOF  shift 64
	DEC  shift 27
	INC  shift 28
	IC  shift 65
	RC  shift 66
	ID  shift 67
	CC  shift 68
	SC  shift 69
	BC  shift 70
	'+'  shift 71
	'-'  shift 72
	'!'  shift 73
	'~'  shift 30
	'('  shift 74
	.  error

	expr  goto 86
	variable  goto 76
	const_val  goto 77
	variable_  goto 34
	method_call  goto 78


state 62
	variable : ID opt_full_brackets '.' . variable  (104)

	DEC  shift 27
	INC  shift 28
	ID  shift 42
	'~'  shift 30
	.  error

	variable  goto 87
	variable_  goto 34


state 63
	func_dcl : typee ID $$1 '(' . opt_arguments ')' func_end  (10)
	opt_arguments : .  (14)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	ID  shift 14
	')'  reduce 14

	typee  goto 55
	opt_arguments  goto 88
	arguments  goto 57


state 64
	expr : SIZEOF . '(' typee ')'  (102)

	'('  shift 89
	.  error


state 65
	const_val : IC .  (111)

	.  reduce 111


state 66
	const_val : RC .  (112)

	.  reduce 112


state 67
	method_call : ID . '(' opt_parameters ')'  (63)
	variable : ID . opt_full_brackets  (103)
	variable : ID . opt_full_brackets '.' variable  (104)
	opt_full_brackets : .  (43)

	'('  shift 90
	EQ  reduce 43
	NE  reduce 43
	LE  reduce 43
	GE  reduce 43
	AND  reduce 43
	OR  reduce 43
	DEC  reduce 43
	INC  reduce 43
	'='  reduce 43
	'|'  reduce 43
	'^'  reduce 43
	'&'  reduce 43
	'<'  reduce 43
	'>'  reduce 43
	'+'  reduce 43
	'-'  reduce 43
	'*'  reduce 43
	'/'  reduce 43
	'%'  reduce 43
	';'  reduce 43
	')'  reduce 43
	','  reduce 43
	'['  reduce 43
	']'  reduce 43
	'.'  reduce 43

	opt_full_brackets  goto 46


state 68
	const_val : CC .  (113)

	.  reduce 113


state 69
	const_val : SC .  (115)

	.  reduce 115


state 70
	const_val : BC .  (114)

	.  reduce 114


state 71
	expr : '+' . expr  (100)

	SIZEOF  shift 64
	DEC  shift 27
	INC  shift 28
	IC  shift 65
	RC  shift 66
	ID  shift 67
	CC  shift 68
	SC  shift 69
	BC  shift 70
	'+'  shift 71
	'-'  shift 72
	'!'  shift 73
	'~'  shift 30
	'('  shift 74
	.  error

	expr  goto 91
	variable  goto 76
	const_val  goto 77
	variable_  goto 34
	method_call  goto 78


state 72
	expr : '-' . expr  (99)

	SIZEOF  shift 64
	DEC  shift 27
	INC  shift 28
	IC  shift 65
	RC  shift 66
	ID  shift 67
	CC  shift 68
	SC  shift 69
	BC  shift 70
	'+'  shift 71
	'-'  shift 72
	'!'  shift 73
	'~'  shift 30
	'('  shift 74
	.  error

	expr  goto 92
	variable  goto 76
	const_val  goto 77
	variable_  goto 34
	method_call  goto 78


state 73
	expr : '!' . expr  (101)

	SIZEOF  shift 64
	DEC  shift 27
	INC  shift 28
	IC  shift 65
	RC  shift 66
	ID  shift 67
	CC  shift 68
	SC  shift 69
	BC  shift 70
	'+'  shift 71
	'-'  shift 72
	'!'  shift 73
	'~'  shift 30
	'('  shift 74
	.  error

	expr  goto 93
	variable  goto 76
	const_val  goto 77
	variable_  goto 34
	method_call  goto 78


state 74
	expr : '(' . expr ')'  (95)

	SIZEOF  shift 64
	DEC  shift 27
	INC  shift 28
	IC  shift 65
	RC  shift 66
	ID  shift 67
	CC  shift 68
	SC  shift 69
	BC  shift 70
	'+'  shift 71
	'-'  shift 72
	'!'  shift 73
	'~'  shift 30
	'('  shift 74
	.  error

	expr  goto 94
	variable  goto 76
	const_val  goto 77
	variable_  goto 34
	method_call  goto 78


state 75
	var_dcl_cnt : variable '=' expr .  (42)
	expr : expr . '+' expr  (79)
	expr : expr . '-' expr  (80)
	expr : expr . '*' expr  (81)
	expr : expr . '/' expr  (82)
	expr : expr . '%' expr  (83)
	expr : expr . '|' expr  (84)
	expr : expr . '&' expr  (85)
	expr : expr . '^' expr  (86)
	expr : expr . '>' expr  (87)
	expr : expr . '<' expr  (88)
	expr : expr . AND expr  (89)
	expr : expr . OR expr  (90)
	expr : expr . EQ expr  (91)
	expr : expr . NE expr  (92)
	expr : expr . GE expr  (93)
	expr : expr . LE expr  (94)

	EQ  shift 95
	NE  shift 96
	LE  shift 97
	GE  shift 98
	AND  shift 99
	OR  shift 100
	'|'  shift 101
	'^'  shift 102
	'&'  shift 103
	'<'  shift 104
	'>'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	';'  reduce 42
	','  reduce 42


state 76
	expr : variable .  (97)
	variable_ : variable . DEC  (109)
	variable_ : variable . INC  (110)

	DEC  shift 49
	INC  shift 50
	EQ  reduce 97
	NE  reduce 97
	LE  reduce 97
	GE  reduce 97
	AND  reduce 97
	OR  reduce 97
	'|'  reduce 97
	'^'  reduce 97
	'&'  reduce 97
	'<'  reduce 97
	'>'  reduce 97
	'+'  reduce 97
	'-'  reduce 97
	'*'  reduce 97
	'/'  reduce 97
	'%'  reduce 97
	';'  reduce 97
	')'  reduce 97
	','  reduce 97
	']'  reduce 97


state 77
	expr : const_val .  (98)

	.  reduce 98


state 78
	expr : method_call .  (96)

	.  reduce 96


state 79
	var_dcl_cnts : var_dcl_cnts ',' var_dcl_cnt .  (40)

	.  reduce 40


state 80
	arguments : typee ID . opt_full_brackets  (16)
	opt_full_brackets : .  (43)

	.  reduce 43

	opt_full_brackets  goto 111


state 81
	proc_dcl : PROCEDURE ID '(' opt_arguments ')' . sc  (20)
	proc_dcl : PROCEDURE ID '(' opt_arguments ')' . block  (21)

	';'  shift 35
	'{'  shift 112
	.  error

	sc  goto 113
	block  goto 114


state 82
	arguments : arguments ',' . typee ID opt_full_brackets  (17)

	INT  shift 3
	BOOL  shift 4
	FLOAT  shift 5
	LONG  shift 6
	CHAR  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	VOID  shift 10
	AUTO  shift 11
	ID  shift 14
	.  error

	typee  goto 115


state 83
	var_dcls : var_dcl sc .  (33)

	.  reduce 33


state 84
	struct_dec : RECORD ID '{' var_dcls '}' . sc  (32)

	';'  shift 35
	.  error

	sc  goto 116


state 85
	var_dcls : var_dcls var_dcl . sc  (34)

	';'  shift 35
	.  error

	sc  goto 117


state 86
	opt_full_brackets : opt_full_brackets '[' expr . ']'  (44)
	expr : expr . '+' expr  (79)
	expr : expr . '-' expr  (80)
	expr : expr . '*' expr  (81)
	expr : expr . '/' expr  (82)
	expr : expr . '%' expr  (83)
	expr : expr . '|' expr  (84)
	expr : expr . '&' expr  (85)
	expr : expr . '^' expr  (86)
	expr : expr . '>' expr  (87)
	expr : expr . '<' expr  (88)
	expr : expr . AND expr  (89)
	expr : expr . OR expr  (90)
	expr : expr . EQ expr  (91)
	expr : expr . NE expr  (92)
	expr : expr . GE expr  (93)
	expr : expr . LE expr  (94)

	EQ  shift 95
	NE  shift 96
	LE  shift 97
	GE  shift 98
	AND  shift 99
	OR  shift 100
	'|'  shift 101
	'^'  shift 102
	'&'  shift 103
	'<'  shift 104
	'>'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	']'  shift 118
	.  error

